fix li spacing

--- a/app/public/css/main.styl
+++ b/app/public/css/main.styl
@@ -49,6 +49,8 @@ body
                     width: 100%
                     border-bottom: thin solid #000
                     display: block
+                li
+                    margin-left: golden em
             
                 #contact
                     //background-color: #800
@@ -56,8 +58,6 @@ body
                     //background-color: #080
                 #experience
                     //background-color: #008
-                    li
-                        margin-left: 1em
                 #education
                     //background-color: #440
                 #projects
